# yara-studio

./: CLA.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/engine/: compiler.rs  export.rs  hex.rs  library.rs  mod.rs  rule_tests.rs  scanner.rs  wizard.rs
src-tauri/tests/: compat.rs
src-tauri/tests/fixtures/: compat_suite.yar
src/lib/: api.ts  format.ts  library.ts  state.svelte.ts  wizard.test.ts  wizard.ts
src/lib/components/: DropOverlay.svelte  Editor.svelte  FileCard.svelte  FileStripe.svelte  HexViewer.svelte  LibrarySidebar.svelte  ResultsPanel.svelte  SaveDialog.svelte  StatusBar.svelte  TestReportDialog.svelte  TestsDialog.svelte  WizardDialog.svelte
src/lib/yara/: cm-theme.ts  language.test.ts  language.ts
src/routes/: +layout.svelte  +page.svelte
