[package]
name = "yara-studio"
version = "0.1.0"
description = "Offline desktop studio for writing, testing and managing YARA rules"
authors = ["Artem Shymko"]
license = "MIT"
repository = "https://github.com/platinum2high/yara-studio"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yara_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yara-x = "1.19.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
